--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "openai": "^4.0.0"
+    "node-fetch": "^2.6.7"
   },
   "engines": {
     "node": ">=14.0.0"
