--- a/package.json
+++ b/package.json
@@ -4,16 +4,13 @@
   "description": "Générateur d'histoires personnalisées pour enfants",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "node-fetch": "^2.6.7"
-  },
-  "engines": {
-    "node": ">=14.0.0"
+    "node-fetch": "^2.7.0",
+    "pdfkit": "^0.14.0"
   }
 }
